--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,10 @@ e2e/docker/rc_test_env/docker-compose.yml
 e2e/docker/data/db
 
 *.p8
+ios/Podfile.lock
+
+ios/Pods/Manifest.lock
+
+ios/Pods/Pods.xcodeproj/project.pbxproj
+
+ios/Pods/
