--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "name": "RocketChatRN",
   "share": "ShareRocketChatRN",
-  "displayName": "RocketChatRN"
+  "displayName": "RocketChatRN",
+  "server": "http://192.168.1.152",
+  "appGroup": "group.ios.chat.rocket",
+  "appStoreID": "1272915472"
 }
